Mon Sep 13 09:57:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Common/CIF_Common.mpc:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Added Client_init in order to rid of the MARSHAL exceptions.

Sun Sep 12 19:20:28 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Components/ProcessColocation_exec.cpp:
        * tests/DAnCE/Components/Progressive_exec.cpp:
        * tests/DAnCE/Components/SimpleAttribute_exec.cpp:
        * tests/DAnCE/Components/SimpleConsumer_exec.cpp:
        * tests/DAnCE/Components/SimpleEmitter_exec.cpp:
        * tests/DAnCE/Components/SimpleFailure_exec.cpp:
        * tests/DAnCE/Components/SimpleLocalProvider_exec.cpp:
        * tests/DAnCE/Components/SimpleLocalUser_exec.cpp:
        * tests/DAnCE/Components/SimpleMultipleUser_exec.cpp:
        * tests/DAnCE/Components/SimpleNilFacetProvider_exec.cpp:
        * tests/DAnCE/Components/SimpleNilFacetUser_exec.cpp:
        * tests/DAnCE/Components/SimpleNull_exec.cpp:
        * tests/DAnCE/Components/SimpleProvider_exec.cpp:
        * tests/DAnCE/Components/SimplePublisher_exec.cpp:
               * tests/DAnCE/Components/SimpleUser_exec.cpp:
        * tests/DAnCE/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:
        * tests/DAnCE/LocalityManager/CommandlinePassage/CommandlinePassage_exec.cpp:

          Compile fixes.

Fri Sep 10 17:20:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          Updates.

Fri Sep 10 17:06:53 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:

          Compile fixes for separated DAnCE.

Fri Sep 10 15:48:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
