@@ -1,3 +1,15 @@
+Tue Sep 14 09:42:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.h:
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
+          Implemented get_named_receptacles.
+
+        * tests/CIF/Receptacle/client.cpp:
+          Enabled get_named_receptacles test.
+
+        * tests/CIF/descriptors/run_test.pl:
+          Sleep 2 seconds.
+
 Mon Sep 13 09:57:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tests/CIF/Common/CIF_Common.cpp:
